@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.21 2012/07/15 07:51:02 jnemeth Exp $
+# $NetBSD: Makefile,v 1.22 2012/07/15 08:58:18 marino Exp $
 #
 # NOTE: when updating this package, there are two places that sound
 #       tarballs need to be checked
 
-DISTNAME=	asterisk-10.6.0
+DISTNAME=	asterisk-10.6.1
 DIST_SUBDIR=	${PKGNAME_NOREV}
 DISTFILES=	${DEFAULT_DISTFILES}
 EXTRACT_ONLY=	${DISTNAME}.tar.gz
@@ -98,11 +98,6 @@ BUILDLINK_TRANSFORM+=	rm:-march=i386
 PLIST_VARS+=	kqueue
 .if exists(/usr/include/sys/event.h)
 PLIST.kqueue=	yes
-.endif
-
-PLIST_VARS+=	mgcp
-.if ${OPSYS} == "DragonFly"
-PLIST.mgcp=	yes
 .endif
 
 .include "options.mk"
