@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2012,v 1.2297 2012/07/16 19:14:55 adam Exp $
+$NetBSD: CHANGES-2012,v 1.2299 2012/07/17 02:04:20 jnemeth Exp $
 
 Changes to the packages collection and infrastructure in 2012:
 
@@ -3561,3 +3561,5 @@ Changes to the packages collection and infrastructure in 2012:
 	Updated databases/phpmyadmin to 3.5.2 [tron 2012-07-15]
 	Updated security/mit-krb5 to 1.10.2 [adam 2012-02-26]
 	Updated games/wargames to 1.02 [abs 2012-07-16]
+	Updated comms/asterisk10 to 10.6.1 [jnemeth 2012-07-17]
+	Updated comms/asterisk18 to 1.8.14.1 [jnemeth 2012-07-17]
